add swagger with docs initial for example
